--- a/src/app/Pages/agregar/agregar.page.html
+++ b/src/app/Pages/agregar/agregar.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-button fill="clear" slot="start"  [routerLink]="['/Inicio']" routerLinkActive="router-link-active" >
+    <ion-button fill="clear" slot="start" [routerLink]="['/Inicio']" routerLinkActive="router-link-active">
       <ion-icon slot="icon-only" name="md-arrow-round-back" color="success"></ion-icon>
     </ion-button>
     <ion-title>Agregar Conexión</ion-title>
@@ -20,31 +20,31 @@
       <ion-label>Url</ion-label>
     </ion-item-divider>
     <ion-item [disabled]="this.Opcion">
-      <ion-input placeholder="Url" clearInput [disabled]="this.Opcion"></ion-input>
+      <ion-input placeholder="Url" clearInput [disabled]="this.Opcion" [(ngModel)]="this.Conexion.Url"></ion-input>
     </ion-item>
     <ion-item-divider color="light">
       <ion-label>Campos</ion-label>
     </ion-item-divider>
     <ion-item [disabled]="!this.Opcion">
-      <ion-input placeholder="Host" clearInput [disabled]="!this.Opcion"></ion-input>
+      <ion-input placeholder="Host" clearInput [disabled]="!this.Opcion" [(ngModel)]="this.Conexion.Host"></ion-input>
     </ion-item>
     <ion-item [disabled]="!this.Opcion">
-      <ion-input placeholder="Puerto" clearInput [disabled]="!this.Opcion"></ion-input>
+      <ion-input placeholder="Puerto" clearInput [disabled]="!this.Opcion" [(ngModel)]="this.Conexion.Puerto" type="number"></ion-input>
     </ion-item>
     <ion-item [disabled]="!this.Opcion">
-      <ion-input placeholder="Base de Datos" clearInput [disabled]="!this.Opcion"></ion-input>
+      <ion-input placeholder="Base de Datos" clearInput [disabled]="!this.Opcion" [(ngModel)]="this.Conexion.Base"></ion-input>
     </ion-item>
     <ion-item-divider color="light">
       <ion-label>Autenticación</ion-label>
-      <ion-checkbox color="success" [disabled]="!this.Opcion"></ion-checkbox>
+      <ion-checkbox color="success" [disabled]="!this.Opcion" [(ngModel)]="this.Conexion.Auth"></ion-checkbox>
     </ion-item-divider>
-    <ion-item>
-      <ion-input placeholder="Usuario" clearInput></ion-input>
+    <ion-item [disabled]="!this.Conexion.Auth">
+      <ion-input placeholder="Usuario" clearInput [disabled]="!this.Conexion.Auth" [(ngModel)]="this.Conexion.User"></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-input placeholder="Contraseña" clearInput></ion-input>
+    <ion-item [disabled]="!this.Conexion.Auth">
+      <ion-input placeholder="Contraseña" clearInput [disabled]="!this.Conexion.Auth" [(ngModel)]="this.Conexion.Password"></ion-input>
     </ion-item>
-    <ion-button color="success" expand="full">
+    <ion-button color="success" expand="full" (click)="this.ClickConexion()">
       <ion-icon slot="start" name="add"></ion-icon>
       Agregar Conexión
     </ion-button>
