--- a/src/app/Pages/inicio/inicio.page.html
+++ b/src/app/Pages/inicio/inicio.page.html
@@ -10,12 +10,12 @@
 <ion-content padding>
   <div *ngIf="this.Conexiones.length > 0; else Imagen">
     <ion-list>
-      <ion-item-sliding>
+      <ion-item-sliding *ngFor="let Item of this.Conexiones">
         <ion-item>
           <ion-avatar slot="start">
             <img src="https://png.icons8.com/color/1600/mongodb.png">
           </ion-avatar>
-          <ion-label>Url De mongo</ion-label>
+          <ion-label>{{Item.BaseDatos}}</ion-label>
         </ion-item>
         <ion-item-options side="start">
           <ion-item-option color="danger" mode="md">
