--- a/src/app/Pages/inicio/inicio.page.html
+++ b/src/app/Pages/inicio/inicio.page.html
@@ -10,7 +10,7 @@
 <ion-content padding>
   <div *ngIf="this.Conexiones.length > 0; else Imagen">
     <ion-list>
-      <ion-item-sliding *ngFor="let Item of this.Conexiones">
+      <ion-item-sliding *ngFor="let Item of this.Conexiones; let i = index">
         <ion-item>
           <ion-avatar slot="start">
             <img src="https://png.icons8.com/color/1600/mongodb.png">
@@ -18,7 +18,7 @@
           <ion-label>{{Item.BaseDatos}}</ion-label>
         </ion-item>
         <ion-item-options side="start">
-          <ion-item-option color="danger" mode="md">
+          <ion-item-option color="danger" mode="ios" (click)="this.EliminarConexion(i)">
             <ion-icon slot="icon-only" name="trash"></ion-icon>
           </ion-item-option>
         </ion-item-options>
