--- a/src/app/Pages/inicio/inicio.page.html
+++ b/src/app/Pages/inicio/inicio.page.html
@@ -8,21 +8,20 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-refresher slot="fixed" (ionRefresh)="this.Refrescar($event)">
+    <ion-refresher-content pullingIcon="arrow-dropdown" refreshingSpinner="circles"></ion-refresher-content>
+  </ion-refresher>
   <div *ngIf="this.Conexiones.length > 0; else Imagen">
     <ion-list>
-      <ion-item-sliding *ngFor="let Item of this.Conexiones; let i = index">
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src="https://png.icons8.com/color/1600/mongodb.png">
-          </ion-avatar>
-          <ion-label>{{Item.BaseDatos}}</ion-label>
-        </ion-item>
-        <ion-item-options side="start">
-          <ion-item-option color="danger" mode="ios" (click)="this.EliminarConexion(i)">
-            <ion-icon slot="icon-only" name="trash"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
+      <ion-item *ngFor="let Item of this.Conexiones; let i = index" lines="full">
+        <ion-avatar slot="start">
+          <img src="https://png.icons8.com/color/1600/mongodb.png">
+        </ion-avatar>
+        <ion-label>{{Item.BaseDatos}}</ion-label>
+        <ion-button fill="outline" (click)="this.Accion(i)" color="success">
+          Opciones
+        </ion-button>
+      </ion-item>
     </ion-list>
   </div>
   <ng-template #Imagen>
