--- a/src/app/Pages/inicio/inicio.page.html
+++ b/src/app/Pages/inicio/inicio.page.html
@@ -18,7 +18,7 @@
           <img src="https://png.icons8.com/color/1600/mongodb.png">
         </ion-avatar>
         <ion-label>{{Item.BaseDatos}}</ion-label>
-        <ion-button fill="outline" (click)="this.Accion(i)" color="success">
+        <ion-button fill="outline" (click)="this.Accion(i, Item)" color="success">
           Opciones
         </ion-button>
       </ion-item>
