--- a/src/app/Pages/datos/datos.page.html
+++ b/src/app/Pages/datos/datos.page.html
@@ -30,22 +30,24 @@
       </ion-item>
       <ion-item *ngIf="this.Seleccion == i" lines="full">
         <ion-spinner name="dots" *ngIf="this.Spin"></ion-spinner>
-        <ion-list>
-          <ion-item *ngFor="let Docs of this.DocumentosCol; let i = index">
-            <ion-button fill="clear" (click)="this.SelectId(Docs._id, i)">
-              <ion-icon slot="icon-only" name="arrow-forward" color="success" *ngIf="this.SeleccionId != Docs._id"></ion-icon>
-              <ion-icon slot="icon-only" name="arrow-down" color="success" *ngIf="this.SeleccionId == Docs._id"></ion-icon>
-            </ion-button>
-            <ion-label>{{Docs._id}}</ion-label>
-            <ion-grid>
-              <ion-row *ngIf="this.SeleccionId == Docs._id">
-                <ion-col size="12">
-                  <ion-label>{{this.Doc}}</ion-label>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-          </ion-item>
-        </ion-list>
+        <ion-grid fixed *ngIf="!this.Spin">
+          <ion-row>
+            <ion-col size="12">
+              <ion-list  *ngFor="let Docs of this.DocumentosCol; let i = index">
+                <ion-item>
+                  <ion-button fill="clear" (click)="this.SelectId(Docs._id, i)">
+                    <ion-icon slot="icon-only" name="arrow-forward" color="success" *ngIf="this.SeleccionId != Docs._id"></ion-icon>
+                    <ion-icon slot="icon-only" name="arrow-down" color="success" *ngIf="this.SeleccionId == Docs._id"></ion-icon>
+                  </ion-button>
+                  <ion-label>{{Docs._id}}</ion-label>
+                </ion-item>
+                <ion-item *ngIf="this.SeleccionId == Docs._id">
+                  <pre>{{ Doc | json }}</pre>
+                </ion-item>
+              </ion-list>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-item>
     </ion-list>
   </div>
