--- a/src/app/Pages/datos/datos.page.html
+++ b/src/app/Pages/datos/datos.page.html
@@ -33,13 +33,21 @@
         <ion-grid fixed *ngIf="!this.Spin">
           <ion-row>
             <ion-col size="12">
-              <ion-list  *ngFor="let Docs of this.DocumentosCol; let i = index">
+              <ion-list *ngFor="let Docs of this.DocumentosCol; let i = index">
                 <ion-item>
                   <ion-button fill="clear" (click)="this.SelectId(Docs._id, i)">
                     <ion-icon slot="icon-only" name="arrow-forward" color="success" *ngIf="this.SeleccionId != Docs._id"></ion-icon>
                     <ion-icon slot="icon-only" name="arrow-down" color="success" *ngIf="this.SeleccionId == Docs._id"></ion-icon>
                   </ion-button>
                   <ion-label>{{Docs._id}}</ion-label>
+                  <ion-buttons>
+                    <ion-button fill="clear">
+                      <ion-icon slot="icon-only" name="md-close" color="danger"></ion-icon>
+                    </ion-button>
+                    <ion-button fill="clear">
+                      <ion-icon slot="icon-only" name="md-sync" color="success"></ion-icon>
+                    </ion-button>
+                  </ion-buttons>
                 </ion-item>
                 <ion-item *ngIf="this.SeleccionId == Docs._id">
                   <pre>{{ Doc | json }}</pre>
