--- a/src/app/Pages/datos/datos.page.html
+++ b/src/app/Pages/datos/datos.page.html
@@ -20,7 +20,7 @@
         </ion-button>
         <ion-label>{{item}}</ion-label>
         <ion-buttons>
-          <ion-button fill="clear">
+          <ion-button fill="clear" (click)="this.EliminarColeccion(item)">
             <ion-icon slot="icon-only" name="md-close" color="danger"></ion-icon>
           </ion-button>
           <ion-button fill="clear">
@@ -33,9 +33,9 @@
         <ion-grid fixed *ngIf="!this.Spin">
           <ion-row>
             <ion-col size="12">
-              <ion-list *ngFor="let Docs of this.DocumentosCol; let i = index">
+              <ion-list *ngFor="let Docs of this.DocumentosCol; let in = index">
                 <ion-item>
-                  <ion-button fill="clear" (click)="this.SelectId(Docs._id, i)">
+                  <ion-button fill="clear" (click)="this.SelectId(Docs._id, in)">
                     <ion-icon slot="icon-only" name="arrow-forward" color="success" *ngIf="this.SeleccionId != Docs._id"></ion-icon>
                     <ion-icon slot="icon-only" name="arrow-down" color="success" *ngIf="this.SeleccionId == Docs._id"></ion-icon>
                   </ion-button>
