--- a/src/app/Pages/datos/datos.page.html
+++ b/src/app/Pages/datos/datos.page.html
@@ -41,7 +41,7 @@
                   </ion-button>
                   <ion-label>{{Docs._id}}</ion-label>
                   <ion-buttons>
-                    <ion-button fill="clear">
+                    <ion-button fill="clear" (click)="this.EliminarDocumento(Docs, item)">
                       <ion-icon slot="icon-only" name="md-close" color="danger"></ion-icon>
                     </ion-button>
                     <ion-button fill="clear">
