Reinicio local storage

--- a/src/app/Pages/datos/datos.page.html
+++ b/src/app/Pages/datos/datos.page.html
@@ -26,6 +26,9 @@
           <ion-button fill="clear">
             <ion-icon slot="icon-only" name="md-add" color="success"></ion-icon>
           </ion-button>
+          <ion-button fill="clear">
+            <ion-icon slot="icon-only" name="md-sync" color="success"></ion-icon>
+          </ion-button>
         </ion-buttons>
       </ion-item>
       <ion-item *ngIf="this.Seleccion == i" lines="full">
