Cambiar el nombre

--- a/src/app/Pages/datos/datos.page.html
+++ b/src/app/Pages/datos/datos.page.html
@@ -26,7 +26,7 @@
           <ion-button fill="clear">
             <ion-icon slot="icon-only" name="md-add" color="success"></ion-icon>
           </ion-button>
-          <ion-button fill="clear">
+          <ion-button fill="clear" (click)="this.CambiarNombre(item)">
             <ion-icon slot="icon-only" name="md-sync" color="success"></ion-icon>
           </ion-button>
         </ion-buttons>
