--- a/src/app/Pages/agregar-usuario/agregar-usuario.page.html
+++ b/src/app/Pages/agregar-usuario/agregar-usuario.page.html
@@ -14,11 +14,11 @@
     </ion-item-divider>
     <ion-item>
       <ion-label>Usuario: </ion-label>
-      <ion-input type="text" placeholder="Usuario" clearInput></ion-input>
+      <ion-input type="text" placeholder="Usuario" clearInput [(ngModel)]="this.User.Username"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Contraseña: </ion-label>
-      <ion-input type="password" placeholder="Contraseña" clearInput></ion-input>
+      <ion-input type="password" placeholder="Contraseña" clearInput [(ngModel)]="this.User.Password"></ion-input>
     </ion-item>
     <ion-radio-group name="Role">
       <ion-item-divider color="light">
