--- a/src/app/Pages/agregar-usuario/agregar-usuario.page.html
+++ b/src/app/Pages/agregar-usuario/agregar-usuario.page.html
@@ -20,7 +20,7 @@
       <ion-label>Contraseña: </ion-label>
       <ion-input type="password" placeholder="Contraseña" clearInput [(ngModel)]="this.User.Password"></ion-input>
     </ion-item>
-    <ion-radio-group name="Role">
+    <ion-radio-group name="Role" [(ngModel)]="this.User.Role[0].role">
       <ion-item-divider color="light">
         <ion-label>Role</ion-label>
       </ion-item-divider>
