--- a/src/app/Pages/datos/datos.page.html
+++ b/src/app/Pages/datos/datos.page.html
@@ -23,7 +23,7 @@
           <ion-button fill="clear" (click)="this.EliminarColeccion(item)">
             <ion-icon slot="icon-only" name="md-close" color="danger"></ion-icon>
           </ion-button>
-          <ion-button fill="clear">
+          <ion-button fill="clear" (click)="this.AgregarDoc();">
             <ion-icon slot="icon-only" name="md-add" color="success"></ion-icon>
           </ion-button>
           <ion-button fill="clear" (click)="this.CambiarNombre(item)">
