--- a/src/app/Pages/inicio/inicio.page.html
+++ b/src/app/Pages/inicio/inicio.page.html
@@ -25,6 +25,6 @@
     </ion-list>
   </div>
   <ng-template #Imagen>
-    <ion-img style="height: 100%;" src="https://icon-icons.com/icons2/1353/PNG/512/if-word-18-2875628_88181.png"></ion-img>
+    <ion-img style="height: 100%;" src="../../../assets/404.png"></ion-img>
   </ng-template>
 </ion-content>
